--- a/.github/project-config.yml
+++ b/.github/project-config.yml
@@ -44,9 +44,9 @@ custom_fields:
     type: "single_select"
     description: "Estimation du temps nécessaire"
     options:
-      - "Rapide (< 2h)"
-      - "Normal (2-6h)"
-      - "Long (> 6h)"
+      - "Rapide (< 30 min)"
+      - "Normal (30 min - 2h)"
+      - "Long (> 2h)"
       
   - name: "Difficulté technique"
     type: "single_select"
