--- a/.github/ISSUE_TEMPLATE/front-end.yml
+++ b/.github/ISSUE_TEMPLATE/front-end.yml
@@ -25,9 +25,9 @@ body:
     attributes:
       label: "⏱️ Durée estimée"
       options:
-        - "Rapide (< 2h)"
-        - "Normal (2-6h)"
-        - "Long (> 6h)"
+        - "Rapide (< 30 min)"
+        - "Normal (30 min - 2h)"
+        - "Long (> 2h)"
     validations:
       required: true
 
